--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </form>
                     </div>
                     <div class="row mt-2">
-                        <div class="col-6">
+                        <div class="col-12 col-md-6">
                             <ul class="nav nav-tabs">
                                 <li class="nav-item">
                                     <a href="#raus" class="nav-link active" data-toggle="tab">
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col order-first col-md-last">
                             <blockquote class="blockquote text-right">
                                 <h1 id="rausResult" class="text-success mb-0">Система устойчива</h1>
                                 <footer class="blockquote-footer">По Раусу</footer>
