more mobile optimization

--- a/index.html
+++ b/index.html
@@ -50,15 +50,17 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col order-first col-md-last">
-                            <blockquote class="blockquote text-right">
-                                <h1 id="rausResult" class="text-success mb-0">Система устойчива</h1>
-                                <footer class="blockquote-footer">По Раусу</footer>
-                            </blockquote>
-                            <blockquote class="blockquote text-right">
-                                <h1 id="gurvicResult" class="text-success mb-0">Система устойчива</h1>
-                                <footer class="blockquote-footer">По Гурвицу</footer>
-                            </blockquote>
+                        <div class="col order-first order-md-last">
+                            <div class="row">
+                                <blockquote class="blockquote text-right col-6 col-md-12">
+                                    <h1 id="rausResult" class="text-success mb-0">Система устойчива</h1>
+                                    <footer class="blockquote-footer">По Раусу</footer>
+                                </blockquote>
+                                <blockquote class="blockquote text-right col-6 col-md-12">
+                                    <h1 id="gurvicResult" class="text-success mb-0">Система устойчива</h1>
+                                    <footer class="blockquote-footer">По Гурвицу</footer>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
                 </div>
