even more mobile optimization

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </form>
                     </div>
                     <div class="row mt-2">
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-auto">
                             <ul class="nav nav-tabs">
                                 <li class="nav-item">
                                     <a href="#raus" class="nav-link active" data-toggle="tab">
@@ -53,11 +53,11 @@
                         <div class="col order-first order-md-last">
                             <div class="row">
                                 <blockquote class="blockquote text-right col-6 col-md-12">
-                                    <h1 id="rausResult" class="text-success mb-0">Система устойчива</h1>
+                                    <h3 id="rausResult" class="text-success mb-0">Система устойчива</h3>
                                     <footer class="blockquote-footer">По Раусу</footer>
                                 </blockquote>
                                 <blockquote class="blockquote text-right col-6 col-md-12">
-                                    <h1 id="gurvicResult" class="text-success mb-0">Система устойчива</h1>
+                                    <h3 id="gurvicResult" class="text-success mb-0">Система устойчива</h3>
                                     <footer class="blockquote-footer">По Гурвицу</footer>
                                 </blockquote>
                             </div>
