--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                             </ul>
                             <div class="tab-content">
                                 <div class="tab-pane fade show active" id="raus">
-                                    <table class="table table-bordered">
+                                    <table class="table table-bordered table-responsive-md">
                                         <tbody id="rausTable"></tbody>
                                     </table>
                                 </div>
                                 <div class="tab-pane fade" id="gurvic">
-                                    <table class="table table-bordered">
+                                    <table class="table table-bordered table-responsive-md">
                                         <tbody id="gurvicTable"></tbody>
                                     </table>
                                     <div id="gurvicDets" class="row">
