--- a/index.html
+++ b/index.html
@@ -17,8 +17,25 @@
                 <div class="align-self-center jumbotron col" style="min-height:75%; margin-bottom: 0">
                     <div class="row">
                         <form class="col">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="polynomial">
+                            <div class="form-group row">
+                                <!-- <input type="text" class="form-control" id="polynomial"> -->
+                                <div class="col-3">
+                                    <input type="number" class="form-control" id="polynomial-power" placeholder="0"
+                                        min="0" max="10">
+                                </div>
+                            </div>
+                            <div class="form-group row" id="polynomial-powers">
+                                <input type="number" class="form-control power col" data-power="10" placeholder="p^10">
+                                <input type="number" class="form-control power col" data-power="9" placeholder="p^9">
+                                <input type="number" class="form-control power col" data-power="8" placeholder="p^8">
+                                <input type="number" class="form-control power col" data-power="7" placeholder="p^7">
+                                <input type="number" class="form-control power col" data-power="6" placeholder="p^6">
+                                <input type="number" class="form-control power col" data-power="5" placeholder="p^5">
+                                <input type="number" class="form-control power col" data-power="4" placeholder="p^4">
+                                <input type="number" class="form-control power col" data-power="3" placeholder="p^3">
+                                <input type="number" class="form-control power col" data-power="2" placeholder="p^2">
+                                <input type="number" class="form-control power col" data-power="1" placeholder="p^1">
+                                <input type="number" class="form-control power col" data-power="0" placeholder="0">
                             </div>
                         </form>
                     </div>
@@ -209,7 +226,7 @@
 
             const PRECITION = 0.001;
             const RANGE = 100;
-            const EPSILON = 0.1;
+            const EPSILON = 10;
             let size = 0;
             let dots = [];
             let parts = 1;
@@ -254,17 +271,47 @@
                 mctx.strokeStyle = "red";
                 $("#mihaResult").removeClass("text-success").addClass("text-danger").text("Система не устойчива");
             }
-            mctx.lineWidth="2";
-            mctx.fillRect(dots[0].x * m + 195, dots[0].y * m + 195, 10, 10);
+            mctx.lineWidth = "2";
+            mctx.fillRect(dots[0].x * m + 198, dots[0].y * m + 198, 4, 4);
             const text = "(" + dots[0].x + "," + dots[0].y + ")";
             mctx.fillText(text, dots[0].x * m + 200 - mctx.measureText(text).width / 2, dots[0].y * m + 215);
             mctx.beginPath();
             mctx.moveTo(dots[0].x * m + 200, dots[0].y * m + 200);
             for (let i = 1; i < dots.length; i++) {
-                mctx.lineTo(dots[i].x * m + 200, dots[i].y * m + 200); 
+                if (dots[i].x < 0) {
+                    dots[i].x = Math.max(dots[i].x, -size * Math.pow(10, 3));
+                } else {
+                    dots[i].x = Math.min(dots[i].x, size * Math.pow(10, 3));
+                }
+                if (dots[i].y < 0) {
+                    dots[i].y = Math.max(dots[i].y, -size * Math.pow(10, 3));
+                } else {
+                    dots[i].y = Math.min(dots[i].y, size * Math.pow(10, 3));
+                }
+                mctx.lineTo(dots[i].x * m + 200, dots[i].y * m + 200);
             }
             mctx.stroke();
         }
+
+
+        $("#polynomial-power").on('input', function (e) {
+            var p = parseInt(e.target.value);
+            if (p > 10) {
+                alert("Index are to big!");
+                return;
+            }
+            var powers = $(".power");
+            var monomials = [];
+            for (var i = 0; i < powers.length; i++) {
+                var power = $(powers[i]);
+                if (power.data('power') > p) {
+                    power.val('');
+                    power.attr('disabled', 'true');
+                } else {
+                    power.attr('disabled', 'false');
+                }
+            }
+        });
 
         $("#polynomial").on('input', function (e) {
             var val = e.target.value;
