--- a/index.html
+++ b/index.html
@@ -17,24 +17,31 @@
                 <div class="align-self-center jumbotron col" style="min-height:75%; margin-bottom: 0">
                     <div class="row">
                         <form class="col">
-                            <div class="form-group row">
-                                <!-- <input type="text" class="form-control" id="polynomial"> -->
-                                <div class="col-3">
-                                    <input type="number" class="form-control" id="polynomial-power" placeholder="0"
-                                        min="0" max="10">
-                                </div>
+                            <!-- <input type="text" class="form-control" id="polynomial"> -->
+                            <div class="row text-center" id="polynomial-powers">
+                                <p class="col mb-0">p^10</p>
+                                <p class="col mb-0">p^9</p>
+                                <p class="col mb-0">p^8</p>
+                                <p class="col mb-0">p^7</p>
+                                <p class="col mb-0">p^6</p>
+                                <p class="col mb-0">p^5</p>
+                                <p class="col mb-0">p^4</p>
+                                <p class="col mb-0">p^3</p>
+                                <p class="col mb-0">p^2</p>
+                                <p class="col mb-0">p^1</p>
+                                <p class="col mb-0"></p>
                             </div>
                             <div class="form-group row" id="polynomial-powers">
-                                <input type="number" class="form-control power col" data-power="10" placeholder="p^10">
-                                <input type="number" class="form-control power col" data-power="9" placeholder="p^9">
-                                <input type="number" class="form-control power col" data-power="8" placeholder="p^8">
-                                <input type="number" class="form-control power col" data-power="7" placeholder="p^7">
-                                <input type="number" class="form-control power col" data-power="6" placeholder="p^6">
-                                <input type="number" class="form-control power col" data-power="5" placeholder="p^5">
-                                <input type="number" class="form-control power col" data-power="4" placeholder="p^4">
-                                <input type="number" class="form-control power col" data-power="3" placeholder="p^3">
-                                <input type="number" class="form-control power col" data-power="2" placeholder="p^2">
-                                <input type="number" class="form-control power col" data-power="1" placeholder="p^1">
+                                <input type="number" class="form-control power col" data-power="10" placeholder="0">
+                                <input type="number" class="form-control power col" data-power="9" placeholder="0">
+                                <input type="number" class="form-control power col" data-power="8" placeholder="0">
+                                <input type="number" class="form-control power col" data-power="7" placeholder="0">
+                                <input type="number" class="form-control power col" data-power="6" placeholder="0">
+                                <input type="number" class="form-control power col" data-power="5" placeholder="0">
+                                <input type="number" class="form-control power col" data-power="4" placeholder="0">
+                                <input type="number" class="form-control power col" data-power="3" placeholder="0">
+                                <input type="number" class="form-control power col" data-power="2" placeholder="0">
+                                <input type="number" class="form-control power col" data-power="1" placeholder="0">
                                 <input type="number" class="form-control power col" data-power="0" placeholder="0">
                             </div>
                         </form>
@@ -294,23 +301,19 @@
         }
 
 
-        $("#polynomial-power").on('input', function (e) {
-            var p = parseInt(e.target.value);
-            if (p > 10) {
-                alert("Index are to big!");
-                return;
-            }
+        $(".power").on('input', function (e) {
             var powers = $(".power");
             var monomials = [];
             for (var i = 0; i < powers.length; i++) {
                 var power = $(powers[i]);
-                if (power.data('power') > p) {
-                    power.val('');
-                    power.attr('disabled', 'true');
-                } else {
-                    power.attr('disabled', 'false');
+                if (power.val() != 0) {
+                    monomials[power.data('power')] = parseFloat(power.val());
                 }
             }
+
+            solveRause(monomials);
+            solveGurvic(monomials);
+            solveMiha(monomials);
         });
 
         $("#polynomial").on('input', function (e) {
