--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                         <form class="col">
                             <!-- <input type="text" class="form-control" id="polynomial"> -->
                             <div class="row text-center" id="polynomial-powers">
-                                <p class="col mb-0">p^10</p>
-                                <p class="col mb-0">p^9</p>
-                                <p class="col mb-0">p^8</p>
-                                <p class="col mb-0">p^7</p>
-                                <p class="col mb-0">p^6</p>
-                                <p class="col mb-0">p^5</p>
-                                <p class="col mb-0">p^4</p>
-                                <p class="col mb-0">p^3</p>
-                                <p class="col mb-0">p^2</p>
-                                <p class="col mb-0">p^1</p>
+                                <p class="col mb-0">p<span class="super">10</span></p>
+                                <p class="col mb-0">p<span class="super">9</span></p>
+                                <p class="col mb-0">p<span class="super">8</span></p>
+                                <p class="col mb-0">p<span class="super">7</span></p>
+                                <p class="col mb-0">p<span class="super">6</span></p>
+                                <p class="col mb-0">p<span class="super">5</span></p>
+                                <p class="col mb-0">p<span class="super">4</span></p>
+                                <p class="col mb-0">p<span class="super">3</span></p>
+                                <p class="col mb-0">p<span class="super">2</span></p>
+                                <p class="col mb-0">p<span class="super">1</span></p>
                                 <p class="col mb-0"></p>
                             </div>
                             <div class="form-group row" id="polynomial-powers">
@@ -268,6 +268,8 @@
             mctx.fillStyle = "black";
             mctx.fillRect(200, 0, 1, 400);
             mctx.fillRect(0, 200, 400, 1);
+            mctx.fillStyle = "yellow";
+            mctx.fillRect(dots[0].x * m + 198, dots[0].y * m + 198, 4, 4);
             if (parts == monomials.length) {
                 mctx.fillStyle = "green";
                 mctx.strokeStyle = "green";
@@ -279,9 +281,8 @@
                 $("#mihaResult").removeClass("text-success").addClass("text-danger").text("Система не устойчива");
             }
             mctx.lineWidth = "2";
-            mctx.fillRect(dots[0].x * m + 198, dots[0].y * m + 198, 4, 4);
-            const text = "(" + dots[0].x + "," + dots[0].y + ")";
-            mctx.fillText(text, dots[0].x * m + 200 - mctx.measureText(text).width / 2, dots[0].y * m + 215);
+            //const text = "(" + dots[0].x + "," + dots[0].y + ")";
+            //mctx.fillText(text, dots[0].x * m + 200 - mctx.measureText(text).width / 2, dots[0].y * m + 215);
             mctx.beginPath();
             mctx.moveTo(dots[0].x * m + 200, dots[0].y * m + 200);
             for (let i = 1; i < dots.length; i++) {
