--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
             const PRECITION = 0.001;
             const RANGE = 100;
             let EPSILON;
-            if (max < 3) {
+            if (max <= 3) {
                 EPSILON = 0.1;
-            } else if (max < 6) {
+            } else if (max <= 5) {
                 EPSILON = 1;
             } else {
                 EPSILON = 10;
